--- a/package.json
+++ b/package.json
@@ -1,13 +1,24 @@
 {
-  "name": "mycoolconsoleapp",
+  "name": "shortstack",
   "version": "0.01.00",
   "description": "Makes the world a better place",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "author": "",
   "license": "UNLICENSED",
+  "keywords": [
+    "cli",
+    "npmtool"
+  ],
+  "bin": {
+    "shortstack": "./out/cli.js"
+  },
+  "files": [
+    "out"
+  ],
   "devDependencies": {
     "@types/chalk": "^2.2.0",
     "@types/colors": "^1.2.1",
@@ -20,12 +31,10 @@
     "chai": "^4.2.0",
     "chalk": "^3.0.0",
     "colors": "^1.4.0",
+    "cross-fetch": "^3.1.5",
     "node-fetch": "^2.6.7",
     "simple-git": "^3.7.1",
     "ts-node": "^8.8.1",
     "xlsx": "^0.18.5"
-  },
-  "bin": {
-    "shortstack": "./package/shortstack.js"
   }
 }
