--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "watch": "tsc --watch"
   },
   "author": "",
   "license": "UNLICENSED",
@@ -22,8 +23,9 @@
   "devDependencies": {
     "@types/chalk": "^2.2.0",
     "@types/colors": "^1.2.1",
-    "@types/node-fetch": "^2.5.4",
     "@types/node": "^12.20.52",
+    "@types/node-fetch": "^2.5.4",
+    "fs-extra": "^10.1.0",
     "tape": "^4.13.0",
     "typescript": "^3.8.3"
   },
