--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "colors": "^1.4.0",
     "cross-fetch": "^3.1.5",
     "node-fetch": "^2.6.7",
+    "open": "^8.4.0",
     "simple-git": "^3.7.1",
     "ts-node": "^8.8.1",
     "xlsx": "^0.18.5"
