--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@types/ping": "^0.4.1",
     "chai": "^4.2.0",
     "chalk": "^3.0.0",
     "colors": "^1.4.0",
     "cross-fetch": "^3.1.5",
     "node-fetch": "^2.6.7",
     "open": "^8.4.0",
+    "ping": "^0.4.2",
     "simple-git": "^3.7.1",
     "ts-node": "^8.8.1",
     "xlsx": "^0.18.5"
